--- a/anaconda/environment.yml
+++ b/anaconda/environment.yml
@@ -1,10 +1,10 @@
 name: master
 channels:
   - defaults
-  - conda-forge
 dependencies:
   - alabaster=0.7.10=py36h306e16b_0
   - asn1crypto=0.24.0=py36_0
+  - attrs=17.4.0=py36_0
   - babel=2.5.3=py36_0
   - bleach=2.1.3=py36_0
   - ca-certificates=2017.08.26=h1d4fec5_0
@@ -49,6 +49,7 @@ dependencies:
   - libxml2=2.9.7=h26e45fe_0
   - markupsafe=1.0=py36hd9260cd_1
   - mistune=0.8.3=py36_0
+  - more-itertools=4.1.0=py36_0
   - nbconvert=5.3.1=py36hb41ffb7_0
   - nbformat=4.4.0=py36h31c9010_0
   - ncurses=6.0=h9df7e31_2
@@ -63,14 +64,17 @@ dependencies:
   - pexpect=4.4.0=py36_0
   - pickleshare=0.7.4=py36h63277f8_0
   - pip=9.0.3=py36_0
+  - pluggy=0.6.0=py36hb689045_0
   - prompt_toolkit=1.0.15=py36h17d85b1_0
   - ptyprocess=0.5.2=py36h69acd42_0
+  - py=1.5.3=py36_0
   - pycparser=2.18=py36hf9f622e_1
   - pygments=2.2.0=py36h0d3125c_0
   - pyopenssl=17.5.0=py36h20ba746_0
   - pyparsing=2.2.0=py36hee85983_1
   - pyqt=5.6.0=py36h0386399_5
   - pysocks=1.6.8=py36_0
+  - pytest=3.5.0=py36_0
   - python=3.6.5=hc3d631a_0
   - python-dateutil=2.7.2=py36_0
   - pytz=2018.3=py36_0
@@ -104,4 +108,8 @@ dependencies:
   - yaml=0.1.7=had09818_2
   - zeromq=4.2.3=h439df22_3
   - zlib=1.2.11=ha838bed_2
+  - pip:
+    - py-cpuinfo==3.3.0
+    - pytest-benchmark==3.1.1
+prefix: /home/alv/anaconda3/envs/master
 
