--- a/anaconda/environment.yml
+++ b/anaconda/environment.yml
@@ -1,6 +1,7 @@
 name: master
 channels:
   - defaults
+  - conda-forge
 dependencies:
   - alabaster=0.7.10=py36h306e16b_0
   - asn1crypto=0.24.0=py36_0
